[gd_scene load_steps=2 format=3 uid="uid://cgmov4mk4ehqe"]

[ext_resource type="Script" path="res://scripts/GameOver.gd" id="1_0g8yb"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
script = ExtResource("1_0g8yb")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
color = Color(0.0, 0.0, 0.0, 0.9)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="CenterContainer"]
layout_mode = 2
custom_minimum_size = Vector2(500, 400)

[node name="MainContainer" type="VBoxContainer" parent="CenterContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="CenterContainer/Panel/MainContainer"]
layout_mode = 2
text = "GAME OVER!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WinnerLabel" type="Label" parent="CenterContainer/Panel/MainContainer"]
layout_mode = 2
text = "Winner: Player"
horizontal_alignment = 1

[node name="ResultsContainer" type="VBoxContainer" parent="CenterContainer/Panel/MainContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ButtonsContainer" type="HBoxContainer" parent="CenterContainer/Panel/MainContainer"]
layout_mode = 2
alignment = 1

[node name="ShopButton" type="Button" parent="CenterContainer/Panel/MainContainer/ButtonsContainer"]
layout_mode = 2
text = "Visit Shop"
custom_minimum_size = Vector2(120, 40)

[node name="NewGameButton" type="Button" parent="CenterContainer/Panel/MainContainer/ButtonsContainer"]
layout_mode = 2
text = "New Game"
custom_minimum_size = Vector2(120, 40)